# familycircle

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  FAMILYCIRCLE-OVERVIEW.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/scripts/: security-tripwire.sh
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  publish.yml  release.yml
backend/: Dockerfile.test  pyproject.toml  pyproject.toml.backup.20251228-152623
backend/app/: __init__.py  config.py  constants.py  db.py  main.py  rate_limit.py
backend/app/api/: auth.py  baby_shower_updates.py  calendar.py  comment_reactions.py  event_comments.py  event_helpers.py  event_photos.py  event_templates.py  events.py  family.py  gift_exchange.py  health.py  notifications.py  poll_templates.py  polls.py  potluck.py  profile.py  registry.py  rsvp.py  rsvp_guests.py  secret_santa.py  settings.py  wishlist.py
backend/app/migrations/: 001_add_dietary_and_budget_columns.py  002_add_has_rsvp_column.py  003_add_potluck_mode.py  004_add_event_types.py  005_add_baby_shower_wedding.py  006_add_polls_and_comments.py  007_add_notification_settings.py  008_add_event_photos.py  009_add_calendar_feed_token.py  010_add_comment_enhancements.py  011_add_poll_templates.py  012_add_baby_shower_updates.py  013_add_wedding_permissions_and_templates.py  014_add_registry_items.py  015_add_rsvp_guests.py  016_add_event_recurrences.py  017_add_event_templates.py  018_create_token_table.py  019_add_compound_indexes.py  020_rename_secret_santa_to_gift_exchange.py  021_add_fk_current_family_id.py  022_cleanup_orphan_gift_assignments.py  README.md  runner.py
backend/app/models/: __init__.py  baby_shower_detail.py  baby_shower_update.py  base.py  birthday_detail.py  comment_mention.py  comment_reaction.py  event.py  event_comment.py  event_photo.py  event_recurrence.py  event_template.py  family.py  family_membership.py  gift_exchange.py  holiday_detail.py  poll.py  poll_template.py  potluck.py  profile_visibility.py  registry_item.py  rsvp_guest.py  secret_santa.py  settings.py  token.py  user.py  user_profile.py  wedding_detail.py  wedding_party_permission.py  wishlist.py
backend/app/schemas/: __init__.py  auth.py  baby_shower.py  baby_shower_update.py  birthday.py  comment_reaction.py  event.py  event_comment.py  event_photo.py  event_template.py  gift_exchange.py  holiday.py  poll.py  poll_template.py  potluck.py  registry_item.py  rsvp_guest.py  secret_santa.py  wedding.py  wishlist.py
backend/app/services/: auth.py  email.py  event_detail_registry.py  file_storage.py  gift_exchange.py  icalendar_service.py  mention_parser.py  notification_init.py  permissions.py  poll_export.py  recurrence.py  scheduler.py  secret_santa.py  settings_service.py  wedding_templates.py
backend/app/services/notifications/: base.py  discord.py  dispatcher.py  email_service.py  fire.py  gotify.py  ntfy.py  pushover.py  slack.py  telegram.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_admin_reset_security.py  test_api_lifecycle.py  test_auth_atomicity.py  test_auth_timing_security.py  test_calendar_feed_security.py  test_email_escaping_security.py  test_event_access_security.py  test_event_delete_gift_exchange_cleanup.py  test_event_helpers.py  test_event_sub_events.py  test_event_to_dict.py  test_family_code_disclosure.py  test_family_delete.py  test_family_removal_security.py  test_gift_exchange_exclusion_security.py  test_gift_exchange_participants_security.py  test_gift_exchange_service.py  test_notification_log_redaction.py  test_notifications.py  test_password_change_security.py  test_permissions.py  test_poll_export_security.py  test_recurrence.py  test_register_security.py  test_router_integration.py  test_settings_stale_context.py  test_template_roundtrip.py  test_wishlist_security.py
frontend/: eslint.config.js  index.html  package.json  package.json.backup.20251228-152658  package.json.backup.20251228-152704  package.json.backup.20251228-152710  package.json.backup.20251228-152717  package.json.backup.20251228-152723  vite.config.ts  vitest.config.ts
frontend/public/: offline.html  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppSettingsModal.tsx  BackButton.tsx  Badge.tsx  CommentThread.tsx  CreateEventModal.tsx  CreatePollModal.tsx  EmptyState.tsx  (+15 more)
tests/e2e/: run.sh
tests/release-smoke/: README.md  compose.yml  run.sh  smoke.py  teardown.sh
(+101 files in other folders)
