[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "familycircle"
version = "1.1.0"
description = "Family event coordination platform"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "HomeLabForge", email = "contact@homelabforge.io" }
]
dependencies = [
    "fastapi>=0.121.0",
    "granian>=2.6.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.4.0",
    "argon2-cffi>=23.1.0",
    "aiosmtplib>=4.0.0",
    "jinja2>=3.1.5",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
