[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "familycircle"
version = "1.1.0"
description = "Family event coordination platform"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "HomeLabForge", email = "contact@homelabforge.io" }
]
dependencies = [
    "fastapi>=0.121.0",
    "granian>=2.6.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.4.0",
    "argon2-cffi>=23.1.0",
    "aiosmtplib>=4.0.0",
    "jinja2>=3.1.5",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["tests/*", "app/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["app", "tests"]
exclude = ["**/__pycache__", ".venv", "build"]
reportMissingImports = true
reportMissingTypeStubs = false
