[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "familycircle"
version = "3.0.0"
description = "Family event coordination platform"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "HomeLabForge", email = "contact@homelabforge.io" }
]
dependencies = [
    "fastapi>=0.135.2",
    "granian>=2.7.2",
    "sqlalchemy[asyncio]>=2.0.48",
    "aiosqlite>=0.22.1",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.4.0",
    "argon2-cffi>=23.1.0",
    "aiosmtplib>=4.0.0",
    "jinja2>=3.1.5",
    "httpx>=0.28.0",
    "apscheduler>=3.11.2",
    "python-magic>=0.4.27",
    "icalendar>=7.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["tests/*", "app/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["app", "tests"]
exclude = ["**/__pycache__", ".venv", "build"]
reportMissingImports = true
reportMissingTypeStubs = false
